--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name": "svelte-cli",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Command line interface for Svelte",
   "main": "index.js",
   "bin": {
     "svelte": "bin.js"
   },
+  "files": [
+    "README.md",
+    "bin.js"
+  ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "rollup -c",
