--- a/.eslintrc
+++ b/.eslintrc
@@ -24,7 +24,8 @@
     },
     "env": {
         "es6": true,
-        "node": true
+        "node": true,
+        "mocha": true
     },
     "extends": [
         "eslint:recommended",
