--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "bin.js"
   ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha test/test.js",
+    "pretest": "npm run build",
     "build": "rollup -c",
     "dev": "rollup -c -w",
     "lint": "eslint src",
@@ -37,13 +38,15 @@
     "chalk": "^1.1.3",
     "eslint": "^3.11.0",
     "eslint-plugin-import": "^2.2.0",
+    "glob": "^7.1.1",
     "minimist": "^1.2.0",
+    "mocha": "^3.2.0",
     "rollup": "^0.37.0",
     "rollup-plugin-commonjs": "^6.0.0",
     "rollup-plugin-json": "^2.0.2",
     "rollup-plugin-node-resolve": "^2.0.0",
     "rollup-plugin-string": "^2.0.2",
-    "sander": "^0.6.0"
+    "svelte": "^1.6.8"
   },
   "dependencies": {
     "svelte": "^1.3.0"
