--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "svelte-cli",
-  "version": "1.5.0",
+  "version": "2.0.0",
   "description": "Command line interface for Svelte",
   "main": "index.js",
   "bin": {
@@ -48,7 +48,7 @@
     "rollup-plugin-string": "^2.0.2",
     "svelte": "^1.50.0"
   },
-  "dependencies": {
-    "svelte": "^1.9.1"
+  "peerDependencies": {
+    "svelte": "*"
   }
 }
