--- a/package.json
+++ b/package.json
@@ -35,19 +35,20 @@
     "node": ">=6.0.0"
   },
   "dependencies": {
-    "svelte": "^1"
+    "svelte": "^2.1.0"
   },
   "devDependencies": {
     "chalk": "^2.3.0",
     "eslint": "^4.14.0",
     "eslint-plugin-import": "^2.8.0",
-    "glob": "^7.1.2",
     "minimist": "^1.2.0",
-    "mocha": "^4.1.0",
-    "rollup": "^0.53.2",
-    "rollup-plugin-commonjs": "^8.2.6",
+    "mocha": "^5.1.1",
+    "rollup": "^0.58.1",
+    "rollup-plugin-commonjs": "^9.1.0",
     "rollup-plugin-json": "^2.3.0",
     "rollup-plugin-node-resolve": "^3.0.0",
-    "rollup-plugin-string": "^2.0.2"
+    "rollup-plugin-string": "^2.0.2",
+    "sander": "^0.6.0",
+    "tiny-glob": "^0.2.0"
   }
 }
