--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "build": "rollup -c",
     "dev": "rollup -cw",
     "lint": "eslint src",
-    "prepublishOnly": "npm run lint && npm run build"
+    "prepublishOnly": "npm run build"
   },
   "repository": {
     "type": "git",
